tests/test_data/networkpolicy_ns2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy
  namespace: ns-2
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ns: ns-1
    - podSelector:
        matchLabels:
          role: client
    ports:
    - protocol: TCP
      port: 8080
